# crustacean

./: .gitignore  .screeps.yaml  Cargo.toml  README.md  Taskfile.yml  allyModel.js  dash.json  js_rand_predictor.rs  ops.json  package.json  profiler.json  screeps.toml  temp.js
.github/workflows/: Build.yml
MIOW/: Cargo.toml  temp.js
MIOW/src/: connect.rs  lib.rs  logging.rs  memory.rs  segment.rs  terminal.rs
javascript/: main.js
js_src/: main.js  test.js
js_tools/: deploy.js
src/: allies.rs  alloc.rs  cache.rs  config.rs  constants.rs  goal_memory.rs  heap_cache.rs  lib.rs  logging.rs  memory.rs  utils.rs
src/building/: roads.rs
src/combat/: ally.rs  global.rs  hate_handler.rs  mod.rs  rank_room.rs  room.rs  safemode.rs
src/combat/ally_syncing/: sss.rs
src/combat/goals/: mod.rs  remote_defense.rs  remote_invader_cleanup.rs  remote_reservation.rs  room_claim.rs  room_reservation.rs
src/combat/remotes/: reservation.rs
src/combat/room/: blame_checkers.rs  event_log.rs  mod.rs
src/combat/setters/: mod.rs  remote_defense.rs  remote_invader_cleanup.rs  remote_reservation.rs  room_claim.rs
src/compression/: mod.rs
src/formation/: formations.rs  mod.rs
src/formation/duo/: duo_utils.rs  mod.rs  movement.rs  run_duo.rs
src/heap_cache/: compressed_matrix.rs  heap_creep.rs  heap_room.rs  mod.rs
src/industries/: mining.rs
src/movement/: caching.rs  coord_convert.rs  creep.rs  flow_field.rs  mod.rs  move_target.rs  movement_utils.rs  path_heap.rs  pathfinding.rs  utils.rs
src/profiling/: timing.rs
src/roles/local/: builder.rs  harvester.rs  hauler.rs  mod.rs  upgrader.rs
src/room/: census.rs  democracy.rs  expansion.rs  hauling.rs  links.rs  local.rs  mod.rs  object_cache.rs  population.rs  spawning.rs  structure_cache.rs  terminal.rs  tower.rs  visuals.rs
src/room/building/: mod.rs  roads.rs
src/room/cache/: creeps.rs  experimental_structures.rs  hauling.rs  mod.rs  movement.rs  resources.rs  stats.rs  structures.rs  traffic.rs
src/room/cache/heap_cache/: hauling.rs  mod.rs
src/room/cache/tick_cache/: creeps.rs  hauling.rs  mod.rs  resources.rs  stats.rs  structures.rs  terminals.rs  traffic.rs
src/room/cache/traffic/: advanced_solver.rs  mod.rs  simple_solver.rs  traffic_cache.rs
src/room/creeps/: manager.rs  market.rs  mod.rs  organizer.rs  recovery.rs
src/room/creeps/combat/: bulldozer.rs  mod.rs  remote_defender.rs  reserver.rs
src/room/creeps/enemy/: attacker.rs  healer.rs  mod.rs
src/room/creeps/global/: bulldozer.rs  claimer.rs  expansion_builder.rs  gift_drop.rs  mod.rs  physical_observer.rs  recycler.rs  reserver.rs  scout.rs  unclaimer.rs
src/room/creeps/local/: base_hauler.rs  builder.rs  bulldozer.rs  fast_filler.rs  harvester.rs  hauler.rs  mineral_miner.rs  mod.rs  repairer.rs  scout.rs  source_miner.rs  storage_sitter.rs  upgrader.rs
src/room/creeps/remote/: invader_cleaner.rs  mod.rs  remote_defender.rs  remote_harvester.rs
src/room/creeps/season1/: digger.rs  mod.rs  scorer.rs
src/room/industries/: construction.rs  mining.rs  mod.rs
src/room/planning/: mod.rs
src/room/planning/creep/: miner.rs
src/room/planning/room/: construction.rs  economy.rs  mod.rs  remotes.rs  resources.rs  roads.rs  skippy_base.rs  structure_visuals.rs
src/room/spawning/: creep_sizing.rs  mod.rs  spawn_manager.rs
src/room/traffic/: cost_matrix.rs  mod.rs  traffic_processor.rs
src/traits/: creep.rs  intents_tracking.rs  mod.rs  position.rs  room.rs  store_proxy.rs
src/utils/: creep.rs  mod.rs  room.rs  utils.rs
src/visual/: map.rs  room.rs
