[package]
name = "crustacean"
version = "0.0.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-game-api = "0.21.0"
wasm-bindgen = {version = "0.2", features=[]}
web-sys = { version = "0.3", features = ["console"] }
structstruck = "0.4.1"
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
regex = "1.9.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# Replace the following to enable wasm-opt optimization
# wasm-pack will try to install wasm-opt automatically, but it must be installed by hand on some
# operating systems.
#wasm-opt = false
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --disable-sign-ext - prevents opcodes that the screeps servers can't load (see
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
wasm-opt = ["-O4", "--disable-sign-ext"]
#wasm-opt = ["-g", "--disable-sign-ext"]

[features]
default = []

sim = ["screeps-game-api/sim"]
