[package]
name = "crustacean"
version = "0.0.0"
authors = []
target_family = "wasm"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
fern = "0.6"
screeps-game-api = { version = "0.22.0", features = ["mmo"] }
wasm-bindgen = {version = "0.2", features=[]}
web-sys = { version = "0.3", features = ["console"] }
structstruck = "0.4.1"
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
enum-map = "2.7.3"
screeps-timing-annotate = { git = "https://github.com/InfinityDevTech/screeps-timing-annotate", optional = true }
lazy_static = "1.5.0"
#screeps-game-utils = "0.22.0"
screeps-game-utils = { git = "https://github.com/khoover/screeps-game-utils", branch = "add-roomxy-iters" }
base65536 = "1.0.1"
flate2 = "1.0.31"
talc = { version = "4.4.1", features = ["counters", "lock_api"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.43"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

[package.metadata.wasm-pack.profile.release]
# Replace the following to enable wasm-opt optimization
# wasm-pack will try to install wasm-opt automatically, but it must be installed by hand on some
# operating systems.
# wasm-opt = false
# See wasm-opt for full available options; handy examples:
# -O4 - optimize aggressively for performance
# -Oz - optimize aggressively for code size
# -g - leave debug info in place, allowing for more descriptive stack traces on panic
# --disable-sign-ext - prevents opcodes that the screeps servers can't load (see 
# --signext-lowering - removes opcodes that the screeps servers can't load (see 
# https://github.com/rustyscreeps/screeps-game-api/issues/391)
#wasm-opt = ["-O4", "--disable-sign-ext"]
wasm-opt = ["-O4", "--signext-lowering"]

[features]
default = ["season1"]
profile = ["screeps-timing-annotate"]

season1 = ["screeps-game-api/seasonal-season-1"]

sim = ["screeps-game-api/sim"]
mmo = ["screeps-game-api/mmo"]
